--- a/AccessFromOtherPage/AccessFromOtherPage.csproj
+++ b/AccessFromOtherPage/AccessFromOtherPage.csproj
@@ -135,7 +135,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\img.png" />
+    <Content Include="Assets\time.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
